--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 	<head>
 		<title>CallE Privacy Policy</title>
 	</head>
-
 	<body>
-		<h2> Calle Indian Call Timer Android App</h2>
-		<h3> Privacy policy</h3>
-		<p>How we use your Information:</p>
-		<br>
-		<p>CallE does not anonymously takes or sends personal data to anywhere outside your personal device. CallE just read call Logs to get minutes information and stores it in its personal local database within you device only. If your Call Log details are misused by some third party CallE does not take any responsibilities for that.
+		<h2>Calle Indian Call Timer Android App</h2>
+		<h3>Privacy policy</h3>
+		<b>1. Information we Collect:</b>
+		<p>We (CallE) do not collect and send personal information anywhere outside your personal device. We just read call Logs and call state to get time information and store it in local android database within your device only. We do not view/use any of your personal information collected by the application.
+		</p>
+		<b>2. How we use your Information:</b>
+		<p>Your call logs collected within your device and kept within the device database locally. It is used to calculate the various time logs within the app.
+		</p>
+		<b>3. Sharing your Information:</b>
+		<p>We (CallE) do not share this information anywhere outside your personal device. Also all the data is stored within the device only.
+		</p>
+		<b>4. How we use protect Information:</b>
+		<p>The call logs information collected in local device is stored using android OS provided database within the device only. If your Call Log details are misused by some third party CallE does not take any responsibilities for that.
 		</p>
 	</body>
 </html>
